service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextjs-starter-service
spec:
  selector:
    app: nextjs-starter
  ports:
    - name: http
      port: 80
      targetPort: 3000
  type: ClusterIP
